Added live feed of Observatory with metadata. Fixed socket.io admin ui.
